Correct Trending card icons alignment on shrinking & write readme file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -344,6 +344,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 5px;
+  align-items: center;
 
 }
 
